--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "cSpell.words": [
+        "bikcraft",
+        "botao",
+        "cabecalho",
+        "Cauadsm",
+        "conteudo",
+        "eletrica",
+        "introducao",
+        "labelledby",
+        "rodape",
         "wght"
-    ]
+    ],
+    "cSpell.language": "en,pt-BR"
 }
